포트폴리오 소개 수정

--- a/_posts/2020-05-02-STAPL.md
+++ b/_posts/2020-05-02-STAPL.md
@@ -15,7 +15,7 @@ type: [Team]
 <br/>
 
 ## Introduction
-"Can't I study English in a fun and effective way?" We started to develop an application with this reason. The goal is active,effective studying, breaking away from the traditional hard, boring, document-based study methods. Object recognition technology using deep learning makes it easy and fast to search for words anytime, anywhere. You can study not only words but also example sentence and record your learning with the Notepad function. The Stapl app is available all age groups. You can learn simple usage and use the application efficiently. It will be applied in real life a new way of studying, not a routine study.
+"어렵고 하기 싫은 영어공부를 재미있고 효과적으로 할 수 있을까?" 라는 생각을 가지고 애플리케이션 개발을 시작했습니다. 기존의 딱딱하고 지루한 문서 기반의 공부 방법에서 벗어나 활동적이고 재미있는 효과적인 공부방법을 제시하는 것을 목표로 하였습니다.
 
 <br/>
 
