--- a/src/content/post/ko/writing/new-blog.mdx
+++ b/src/content/post/ko/writing/new-blog.mdx
@@ -2,92 +2,165 @@
 title: '블로그 새단장'
 description: 'Github Pages 블로그 만들기.'
 date: 2025-01-30 17:59:58
-draft: false
+draft: true
 tags:
   - blog
   - github
   - astro
 ---
 
-2025년을 맞아 또 새로운 도전 욕구 뿜뿜.
+> 블로그 만들기 with. Astro, Github Pages
 
-블로그를 주기적으로 다시 써보자!
-원래 공부를 시작하기 전 방청소 하듯
-[티스토리](https://ljg960730.tistory.com/) 스킨도 바꿔보았지만
-이번에는 블로그 자체를 새로 만들어보기로 했다.
+새해가 되었다.
+신년 맞이 또 새로운 도전 욕구 뿜뿜.
+
+블로그를 다시 써보자!
+원래 공부를 시작하기 전 방청소 하듯... [티스토리](https://ljg960730.tistory.com/) 스킨도 바꿔보았지만
+이번에는 Github Page를 활용해서 블로그를 만들어 보기로 헀다.
 
 ## 테마 고르기
 
-나의 테마 선정기준은 "심플"
+나의 테마 선정기준은 **"심플"**
+그리고 무료여야 한다. (돈 없음)
 
-> React
-[Resume React App Template](https://github.com/webeetle/resume-react-app?tab=readme-ov-file)
-[React-CV](https://github.com/sbayd/react-cv)
+React
+- [Resume React App Template](https://github.com/webeetle/resume-react-app?tab=readme-ov-file)
+- [React-CV](https://github.com/sbayd/react-cv)
 
-> Nextjs
-[d5br5/d5br5.blog](https://github.com/d5br5/d5br5.blog)
-[hyesungoh/comet-land](https://github.com/hyesungoh/comet-land)
+Nextjs
+- [d5br5/d5br5.blog](https://github.com/d5br5/d5br5.blog)
+- [hyesungoh/comet-land](https://github.com/hyesungoh/comet-land)
 
-> Astro
-[bepyan/bepyan.me.v2](https://github.com/bepyan/bepyan.me.v2)
+Astro
+- [bepyan/bepyan.me.v2](https://github.com/bepyan/bepyan.me.v2)
 
-> Jekyll
-[moonwalk](https://github.com/abhinavs/moonwalk)
+Jekyll
+- [moonwalk](https://github.com/abhinavs/moonwalk)
+
+>
+> [Nextjs starter template](https://vercel.com/templates/next.js), [Astro Theme](https://astro.build/themes/)
+> Astro도 Nextjs처럼 theme hub가 있더라고용
+> 테마 찾으시는 분들은 추가로 참고해도 좋을 것 같아요
 
 
-대망의 결승전
-[comet-land](https://github.com/hyesungoh/comet-land) VS [bepyan.me.v2](https://github.com/bepyan/bepyan.me.v2)
+#### 대망의 결승전
+[comet-land](https://github.com/hyesungoh/comet-land) VS **[bepyan.me.v2](https://github.com/bepyan/bepyan.me.v2)**
 
-두 가지 테마 모두 심플하고 사용하기 편했지만 우승은 지금 적용한 이 슈퍼 심플 테마
-이 테마의 메인 페이지를 처음 본 순간 깔끔하다를 넘어 마음이 평온해지는 느낌이 들었다.
+두 가지 테마 모두 심플하고 사용하기 편했지만 우승은 지금 적용한 이 슈퍼 심플 테마가 되었다.
+메인 페이지를 처음 보자마자 심플함을 넘어선 평온함이 느껴졌다.
+그리고 이 테마의 주인장이신 평안님 블로그를 둘러보다가 만드신 다른 테마들도 많은 걸 발견.
+> https://bepyan.me
+> https://bepyan.github.io/
+> https://bepyan-me.vercel.app/
 
-테마의 주인장이신 평안님 블로그 둘러보다가 만드신 다른 테마들도 많은 걸 발견했다.
-https://bepyan.github.io/
-https://bepyan.me
-https://bepyan-me.vercel.app/
-
-이 테마가 버전2였고 버전1과 같이 보니까 둘다 갖고 싶어졌다.
+선택한 이 테마가 버전2인데 버전1도 나는 마음에 들었다.
 버전1과 버전2 2개중 고민하다가 결국 섞어 쓰기로했다.
 
-![스타뿅](/img/new-blog/original-star.png)
+![소스 공개 감사합니다(꾸벅 + 스타 꾹)](/img/new-blog/original-star.webp)
 소스도 무료로 풀어주셔서 커스텀을 시작! 해보자 했는데..
 저는 astro라는 프레임워크를 처음봤어요.. (Next.js도 안써봄)
 뭐 어쩌겠어요.. 커스텀하려면 살펴봐야겠죠..!
 
+## 미리보기
+<div class="flex" style="gap:1px;">
+    ![내 블로그의 메인 페이지.gif](/img/new-blog/record-home.webp)
+</div>
+나도 닉네임을 만들었다.
+
+<mark>leeworms</mark> lee(이) + worms(재근) 이다...
+
+>
+> <div class="mx-auto flex gap-2">
+>     ![1](/img/new-blog/favicon.svg)
+> </div>
+> worms(재근) 검색하면 지렁이가 나오는데
+> leeworms 이 영어도 뭔가 지렁이가 머리들고 있는 거 같아서
+> 파비콘도 만들어봤다. ( 쫌 귀엽지 않나요? )
 
 ## 테마 커스텀
+크게 바꾼 부분은 없지만 조그만한 부분을 바꿔보았다.
+
+먼저 저는 영어와 친하지 않기 때문에 영어로 쓸 글이 없어요.
+그래서 번역 버튼을 없애고, 토글 버튼을 추가하여 드롭 박스 버튼 역할을 대신 하게 했습니다.
+![기존 드롭박스 버튼](/img/new-blog/original-dropbox.webp)
+
+메뉴 부분 UI도 조금 바꾸고 뒤로가기와 홈 버튼을 추가했습니다.
+<div class="flex" style="gap:1px;">
+    ![뒤로가기 버튼](/img/new-blog/back.webp)
+    ![홈 버튼](/img/new-blog/home.webp)
+</div>
 
 <div class="flex" style="gap:1px;">
-    ![240331-180626](/img/new-blog/record-home.gif)
+    ![레포지토리 표시](/img/new-blog/copyright.webp)
 </div>
-23년 11월 무렵, 넥스터즈 24기 모집 공고가 떴었다.
 
-나는 그동안 조금은 폐쇄적인 공간에서 활동을 했었다. 사내 스터디, 개인 사이드 프로젝트, 지인들과 사이드 프로젝트... 이제 3년차 개발자로 접어드는 무렵, 나의 활동 공간을 넓여, 더 다양한 사람을 만나보고 싶었다. [23년 회고록](https://bepyan.me/post/2023-settlement#%EB%B9%84%EC%8A%B7%ED%95%9C-%EA%B4%80%EC%8B%AC%EC%82%AC%EC%9D%98-%EC%82%AC%EB%9E%8C%EB%93%A4%EA%B3%BC-%EA%B5%90%EB%A5%98%ED%95%98%EB%8A%94-%ED%99%98%EA%B2%BD)에서도 이에 대해 다짐했다.
+페이지 하단 부분에 적용한 테마의 레포지토리 정보를 남길 수 있게 추가를 마무리로 디자인 수정은 여기까지.
 
-넥스터즈는 아주 매력적인 환경이었기에, 나는 바로 서류를 끄적이게 되었다.
-지원 준비 할 때, **운영진들의 회고록**이 컬쳐핏을 맞춰 가는데 큰 도움이 되었다.
 
-- https://imksh.com/108
-- https://kokojong.tistory.com/78
+## 데이터 추가
 
-아래는 당시 내가 서류에 작성한 내용이다.
-최대한 진정성 있으면서 커뮤니티에 대한 열정이 돋보이도록 노력했다.
+검색엔진에 등록하고 싶어서 메타태그를 변경하고, 사이트맵을 추가했다.
+- [Naver Search Advisor](https://searchadvisor.naver.com/),
+- [Google Search Console](https://search.google.com/search-console)
 
-> NEXTERS에 지원하신 이유가 무엇인가요? NEXTERS를 통해 얻어가고 싶은 건 무엇인가요? (500자 이내)
->
-> <br />
->
-> '이전으로 돌아갈 수 없는 경험', 토스가 외친 슬로건에 저는 큰 감명을 받았습니다. 사용자와의 상호작용 가운데 이전에 경험하지 못한 편리함을 제공하는 것은 가슴을 뜨겁게 만듭니다. 현재 회사에서 팀 간의 복잡한 이해관계와 협업 시스템의 한계로, 이러한 경험에 집중하여 도전적으로 부딪치지 못한 점이 아쉽습니다.
->
-> <br />
->
-> NEXTERS는 도전적인 동아리인 것 같습니다. 기수마다 흥미로운 경험을 선사하는 프로덕트를 만들어 내고 있습니다. 저도 NEXTERS와 함께 새로운 서비스 경험을 만들고 싶습니다. 더불어 회원들과 긍정적인 영향력을 주고받으면서 개발자로서, 또 사람으로서 더욱 성장하고 싶습니다.
+깃허브 댓글 기능을 나의 레포지토리 정보로 변경.
+- [Next.js 블로그 댓글 기능 추가하기 - bepyan](https://bepyan.github.io/blog/nextjs-blog/6-comments)
 
-면접은 면접관 3명에 지원자 3명이 동시에 비대면으로 진행되었다.
-"기술적 탁월함" 보다는 "**프로젝트를 임하는 자세**"에 대한 검증이 주로 있었다. 다행히 면접관이 바라보는 핏이 나와 맞아서 합격할 수 있었던 것 같다.
 
-TMI
+## 배포하기
+배포는 [Vercel](https://vercel.com/), [Github page](https://pages.github.com/) 두 가지 고민하다가 Github page로 결정.
+기존 Ruby 기반 Jekyll 테마를 사용하고 있었는데, 이걸 밀고 갈아 끼우기로 했다.
 
-- 기술면접관과 현업에서 svelte를 사용하는 고충에 대한 하소연을 주고 받는 신기한 경험을 했다.
-- 면접관들이 이 블로그에 대해서 칭찬해주셨고 나는 너무 뿌듯했다.
-- 지원자 옆에서 나 자신을 어필하고 있는 것이 조금 머쓱했다.
+배포는 [Astro 공식 문서](https://docs.astro.build/ko/guides/deploy/github)를 참고하여 진행.
+
+[Github Actions](https://github.com/features/actions) 도 처음 사용해봤다.
+deploy.yml 추가 작성 후 푸시하니 자동으로 배포 파이프라인이 실행 되었다.
+
+```bash
+...
+
+sh: 1: bun: not found
+
+Error: Process completed with exit code 127.
+```
+근데.. 자꾸 bun이 없대.. bun이 뭔데요..ㅜㅜ
+
+>[bun](https://bun.sh/)은 Node 또는 Deno와 같은 JavaScript 런타임 및 패키지 관리자.
+
+Local 환경은
+https://www.npmjs.com/package/bun -> Supported Platforms
+내 os 맞게 설치하니까 정상적으로 빌드가 되었다.
+
+Github Actions Job Step은  bun github 참조
+https://github.com/oven-sh/setup-bun
+
+
+```yaml title="deploy.yml" caption="Bun 설치 Step 추가"
+jobs:
+  build:
+    runs-on: ubuntu-latest
+    steps:
+      - name: Checkout your repository using git
+        uses: actions/checkout@v4
+      - name: Install Bun in GitHub Actions // [!code ++]
+        uses: oven-sh/setup-bun@v2 // [!code ++]
+        with: // [!code ++]
+          bun-version: 1.1.34 // [!code ++]
+      - name: Install, build, and upload your site
+        uses: withastro/action@v3
+```
+
+
+
+이렇게 bun을 설치하고 다시 푸시하니 정상적으로 배포가 되었다ㅎㅎ
+
+> \+ Warning 제거
+> [Deprecation [legacy-js-api]: The legacy JS API is deprecated and will be removed in Dart Sass 2.0.0.](https://www.fparedes.com/blog/solve-js-api-deprecation-in-dart-sass-in-astro/)
+
+
+## 맺으면서
+
+역시 새로운 환경 박치기는 항상 재미있다.
+
+이제 블로그도 완성되었으니, 글만 좀 주기적으로 잘 쓰면 될 것 같다.
+개설한 김에 도메인도 구매해서 연결해볼까 했지만, 이 돈은 치킨을 사먹기로 했다 ㅎㅎ
