update: 블로그 새단장

--- a/src/content/post/ko/writing/example.mdx
+++ b/src/content/post/ko/writing/example.mdx
@@ -3,7 +3,7 @@ title: '글 예시'
 description: ''
 date: 1997-12-23 21:36:03
 updatedDate: 2024-01-20 00:00:04
-draft: false
+draft: true
 ---
 
 **마크다운**(Markdown)은 일반 텍스트 기반의 경량 마크업 언어입니다. 일반 텍스트로 서식이 있는 문서를 작성하는 데 사용되며, 일반 마크업 언어에 비해 문법이 쉽고 간단한 것이 특징입니다.
