--- a/src/content/post/ko/writing/new-blog.mdx
+++ b/src/content/post/ko/writing/new-blog.mdx
@@ -2,7 +2,7 @@
 title: '블로그 새단장'
 description: 'Github Pages 블로그 만들기.'
 date: 2025-01-30 17:59:58
-draft: true
+draft: false
 tags:
   - blog
   - github
