mod: webp -> gif

--- a/src/content/post/ko/writing/new-blog.mdx
+++ b/src/content/post/ko/writing/new-blog.mdx
@@ -63,7 +63,7 @@ Jekyll
 
 ## 미리보기
 <div class="flex" style="gap:1px;">
-    ![내 블로그의 메인 페이지.gif](/img/new-blog/record-home.webp)
+    ![내 블로그의 메인 페이지.gif](/img/new-blog/record-home.gif)
 </div>
 나도 닉네임을 만들었다.
 
@@ -82,7 +82,7 @@ Jekyll
 
 먼저 저는 영어와 친하지 않기 때문에 영어로 쓸 글이 없어요.
 그래서 번역 버튼을 없애고, 토글 버튼을 추가하여 드롭 박스 버튼 역할을 대신 하게 했습니다.
-![기존 드롭박스 버튼](/img/new-blog/original-dropbox.webp)
+![기존 드롭박스 버튼](/img/new-blog/original-dropbox.gif)
 
 메뉴 부분 UI도 조금 바꾸고 뒤로가기와 홈 버튼을 추가했습니다.
 <div class="flex" style="gap:1px;">
